--- a/VenturaITC.DSMS/Views/Students/Index.cshtml
+++ b/VenturaITC.DSMS/Views/Students/Index.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.student_type_id)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.category_id)
+            @Html.DisplayNameFor(model => model.license_id)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.enrollmentDate)
@@ -44,7 +44,7 @@
             @Html.DisplayFor(modelItem => item.student_type_name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.category_name)
+            @Html.DisplayFor(modelItem => item.license_name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.enrollmentDate)
